Fix release github workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
 
   upload-release-assets:
     name: Upload Release Assets
-    needs: package-application
+    needs: package
     runs-on: ubuntu-latest
     permissions:
       contents: write
